2006-10-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/pic16/glue.c (pic16emitMaps),
	* src/pic/glue.c (pic14emitMaps): hopefully fixed bug 1568779
	* device/lib/gets.c: fixed bug 1568829,thanks Philipp Krause
	* device/lib/pic16/libc/string/memcpypgm2ram.c,
	* device/lib/pic16/libc/string/memcpyram2ram.c: fixed bug 1568836, thanks
	  Philipp Krause
	* as/mcs51/asmain.c (asmbl, newdot): fixed problems with absolute areas
	* as/link/mcs51/lkmem.c (summary2): reverted, do do count abs segments

2006-09-30 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* support/librarian/sdcclib.c: Added option -l.
	* as/link/mcs51/lkmem.c: don't use absolute segments to compute memory
	  usage totals.
	* device/lib/make51lib.bat: added.  Allows building mcs51 libraries easily
	  using Windows command prompt.

2006-09-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/libsdcc.lib: added module rand
	* src/ds390/ralloc.c (rematStr),
	* src/hc08/ralloc.c (rematStr),
	* src/mcs51/ralloc.c (rematStr),
	* src/z80/ralloc.c (rematStr): made output more consistent
	* src/mcs51/gen.c: cosmetic changes

2006-09-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/port.h: added mem.cabs_name to PORT
	* src/ds390/main.c,
	* src/hc08/main.c,
	* src/mcs51/main.c,
	* src/pic16/main.c,
	* src/pic/main.c,
	* src/xa51/main.c,
	* src/z80/main.c: added cabs_name initializers
	* src/SDCCglue.c (emitStaticSeg): allocate and initialize absolute
	  constants
	  (emitMaps): emit absolutes in code memory into cabs_name
	* src/SDCCmem.c,
	* src/SDCCmem.h: added memory map c_abs and defined CABS_NAME
	* src/ds390/gen.c (genCodePointerGet): fixed bug if left is a literal
	* support/regression/fwk/include/testfwk.h: added define for at
	* support/regression/tests/absolute.c: added, new

2006-09-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genPlusIncr, genMinusDec, genAddrOf): small
	  optimizations, see also patch 887161 by Stas Sergeev