@@ -1,3 +1,8 @@
+2006-10-02 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* as/link/z80/lkarea.c: essentially reverted lnksect() to #4380 which
+	  fixes bug 1566015
+
 2006-10-01 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/pic16/glue.c (pic16emitMaps),
